--- a/pop_manage/templates/page.html
+++ b/pop_manage/templates/page.html
@@ -60,6 +60,9 @@
                             <hr />
                             <div>sound source: {{ data.audioInfo }}
                             </div>
+                            <hr />
+                            <div>submitted by: {{ data.submitBy }}
+                            </div>
                         </div>
                     </div>
                 </div>
