--- a/pop_main/views/index.ejs
+++ b/pop_main/views/index.ejs
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <div class="container mt-3">
+    <div class="container mt-3 mb-3">
         <div id="cards" class="d-flex align-content-center flex-wrap">
             <h3 class="position-absolute top-50 start-50 translate-middle">Loading...</h3>
         </div>
