--- a/pop_main/views/summary.ejs
+++ b/pop_main/views/summary.ejs
@@ -60,20 +60,20 @@
 
 
     <script>
-        updateBoard()
+        updateTable()
 
         function formatNumber(num) {
             return (new Intl.NumberFormat('en-US')).format(num)
         }
 
-        function updateBoard() {
-            fetch('/api/list')
+        function updateTable() {
+            fetch('/api/listall')
                 .then(res => res.json())
-                .then(json => mainBoard(json))
+                .then(json => mainTable(json))
                 .catch(err => console.error(err))
         }
 
-        function mainBoard(arr) {
+        function mainTable(arr) {
             let text = `<table id="table" class="table table-striped table-hover table-bordered text-center">
                 <thead class="table-primary">
                 <tr style="height:60px;">
@@ -94,14 +94,14 @@
                 let yourCount = localStorage.getItem(item.key) ? localStorage.getItem(item.key) : 0;
                 totalCount += item.popCount;
                 totalYourCount += Number(yourCount);
-                text += domList(item, yourCount)
+                text += domTable(item, yourCount)
             }
             text += `</tbody></table>`;
             document.getElementById('allClick').innerHTML = `Total clicks are ${formatNumber(totalCount)} and your total clicks are ${formatNumber(totalYourCount)}.`
             document.getElementById('allTable').innerHTML = text;
         }
 
-        function domList(item, number) {
+        function domTable(item, number) {
             return `<tr onclick="document.location='/${item.key}'">
                 <td>${item.name}</td>
                 <td><img src="${item.imgNormalUrl}" alt="${item.name}" style="object-fit: cover; object-position: center; height: 50px; width: 50px;"></td>
