--- a/pop_main/views/summary.ejs
+++ b/pop_main/views/summary.ejs
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-    <title>
-        <%= title %>
-    </title>
+    <title>Pop EunBin - Summary</title>
     <meta name="keywords" content="Pop EunBin, Park Eunbin, 박은빈">
     <meta name="description" content="Pop EunBin, click Park Eunbin characters">
     <meta name="author" content="Twitter @EveryEunbin">
